# honest-reviews

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
chat/: candidate_scorer.py  context_builder.py  loader.py  main.py  models.py  store.py
jobs/: taxonomy.yaml
products/: drift.yaml  intercom.yaml  percepto.yaml  qualified.yaml  warmly.yaml
scrapers/: base.py  cli.py  vendor_docs.py
tagger/: staleness.py  tagger.py
tests/: test_candidate_scorer.py  test_chat_endpoint.py  test_context_builder.py  test_models.py  test_staleness.py  test_store.py
ui/: index.html
