[project]
name = "honest-reviews"
version = "0.1.0"
description = "LLM-powered honest product comparison engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
scrape = "scrapers.cli:scrape"
tag = "tagger.tagger:tag"
check-stale = "tagger.staleness:check_stale"

[tool.hatch.build.targets.wheel]
packages = ["chat", "tagger", "scrapers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
